--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                 <div class="product-image">
                     <img src="https://m.media-amazon.com/images/I/71sMtWExYQL._AC_SL1500_.jpg" alt="Chairs" style="width: 100%; height: auto; border-radius: 5px;" />
                 </div>
-                <div class="product-name">Chairs</div>
+                <div class="product-name">Tablet</div>
                 <div class="product-price">$22.99</div>
                 <button class="buy-now">Buy Now</button>
                 <button class="submit-order" onclick="location.href='submit-order.html'">Submit Order</button>
@@ -92,7 +92,7 @@
                 <div class="product-image">
                     <img src="https://m.media-amazon.com/images/I/71sMtWExYQL._AC_SL1500_.jpg" alt="Chairs" style="width: 100%; height: auto; border-radius: 5px;" />
                 </div>
-                <div class="product-name">Tablat</div>
+                <div class="product-name">Tablet</div>
                 <div class="product-price">$22.99</div>
                 <button class="buy-now">Buy Now</button>
                 <button class="submit-order" onclick="location.href='submit-order.html'">Submit Order</button>
