--- a/public/submit-order.html
+++ b/public/submit-order.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit Your Order</title>
     <link rel="stylesheet" href="submit-order.css">
+    <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 600px)"> <!-- Mobile CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Sriracha&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -50,7 +51,7 @@
                 <label for="file-upload" class="custom-file-upload">
                     Order Screenshot
                 </label>
-                <input id="file-upload" type="file" name="file">
+                <input id="file-upload" type="file" name="proofOfPurchase">
                 
                 <button type="submit" class="submit-btn">Confirm Order</button>
             </form>
