--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <title>My Marketplace</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Sriracha&display=swap" rel="stylesheet">
-    </head>
+    <link rel="stylesheet" href="mobilehome.css" media="only screen and (max-width: 600px)"> <!-- Mobile CSS file -->
+</head>
     <body>
         <div class="header">
             <!-- Use direct image link -->
